<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_one">1</string>
    <string name="app_two">2</string>
    <string name="app_three">3</string>
    <string name="app_four">4</string>
    <string name="app_five">5</string>
    <string name="app_six">6</string>
    <string name="app_seven">7</string>
    <string name="app_eight">8</string>
    <string name="app_nine">9</string>
    <string name="action_new_game">New Game</string>
    <string name="first_computer">android starts the game</string>
    <string name="turn_human">your turn</string>
    <string name="first_human">u go now</string>
    <string name="turn_computer">android\'s turn</string>
    <string name="result_tie">it\'s a tie try again to win</string>
    <string name="result_human_wins">hurray!! you won!</string>
    <string name="result_computer_wins">try again!! android won!</string>

</resources>
